fixed #167 | tested on safari, chrome & firefox

--- a/_assets/css/main.sass
+++ b/_assets/css/main.sass
@@ -1058,10 +1058,14 @@ span.fa-angle-down
   font-size: 1.65em
   line-height: 1.65em
   margin-top: 1.5em
+  position: relative
+  left: -1rem
 
 .contact-info-email h6, .contact-info-office h6, .contact-info-meeting h6
-  margin-top: 1em
-  position: absolute
+  padding-top: 4em
+  width: 1rem
+  white-space: nowrap
+  height: 10rem
 
 .contact-info-email-container, .contact-info-office-container, .contact-info-meeting-container
   justify-content: flex-start
@@ -1070,6 +1074,7 @@ span.fa-angle-down
   height: 10rem
   display: inline-flex
   vertical-align: bottom
+
 
 .contact-info-email::before, .contact-info-office::before, .contact-info-meeting::before
   position: absolute
